--- a/myWebsite/requirements.txt
+++ b/myWebsite/requirements.txt
@@ -1,7 +1,9 @@
-asgiref==3.7.2
-crispy-bootstrap5==2023.10
-Django==5.0.2
+asgiref==3.8.1
+crispy-bootstrap5==2024.2
+Django==5.0.4
 django-crispy-forms==2.1
-Pillow==10.2.0
-sqlparse==0.4.4
-tzdata==2023.3
+packaging==24.0
+pillow==10.3.0
+pip-review==1.3.0
+sqlparse==0.5.0
+tzdata==2024.1
