--- a/myWebsite/requirements.txt
+++ b/myWebsite/requirements.txt
@@ -1,9 +1,11 @@
-asgiref==3.8.1
+asgiref==3.9.1
 crispy-bootstrap5==2025.6
-Django==5.2.3
+Django==5.2.6
 django-crispy-forms==2.4
 packaging==25.0
 pillow==11.3.0
 pip-review==1.3.0
+python-decouple==3.8
+python-dotenv==1.1.1
 sqlparse==0.5.3
 tzdata==2025.2
