--- a/myWebsite/requirements.txt
+++ b/myWebsite/requirements.txt
@@ -1,11 +1,11 @@
-asgiref==3.10.0
+asgiref==3.11.0
 crispy-bootstrap5==2025.6
-Django==5.2.8
+Django==6.0
 django-crispy-forms==2.5
+django-environ==0.12.0
 packaging==25.0
 pillow==12.0.0
 pip-review==1.3.0
-python-decouple==3.8
 python-dotenv==1.2.1
-sqlparse==0.5.3
-tzdata==2025.2
+sqlparse==0.5.5
+tzdata==2025.3
